k8s/manifests-573443/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-573443
  namespace: journee
  labels:
    app: journee-573443
spec:
  replicas: 1
  selector:
    matchLabels:
      app: journee-573443
  template:
    metadata:
      labels:
        app: journee-573443
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-573443
          image: gcr.io/my-docker-471807/journee:573443-9f8cea
          ports:
            - containerPort: 3000
