k8s/manifests-573443/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-573443
  namespace: journee
spec:
  selector:
    app: journee-573443
  ports:
    - port: 80
      targetPort: 3000
